// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionElement renderTxTime - "from this device" label renders "from this device" label with nonce when nonce exists 1`] = `
[
  <TouchableHighlight
    activeOpacity={1}
    onPress={[Function]}
    style={
      {
        "backgroundColor": "#ffffff",
        "flex": 1,
      }
    }
    underlayColor="#f3f5f9"
  >
    <View
      style={
        [
          {
            "padding": 15,
          },
          undefined,
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 30,
              "marginVertical": 2,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            [
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 12,
                "marginBottom": 10,
              },
              {
                "marginBottom": 10,
                "paddingBottom": 0,
              },
            ],
          ]
        }
      >
        #3 - Dec 31 at 7:00 pm from this device
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
            },
            {
              "alignItems": "flex-start",
              "marginTop": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "marginRight": 15,
              },
              undefined,
            ]
          }
        >
          <View
            onLayout={[Function]}
            style={
              {
                "alignSelf": "flex-start",
                "position": "relative",
              }
            }
            testID="badge-wrapper-badge"
          >
            <View>
              <Image
                resizeMode="stretch"
                style={
                  {
                    "height": 32,
                    "width": 32,
                  }
                }
              />
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "aspectRatio": 1,
                  "height": 0,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateY": -0,
                    },
                  ],
                }
              }
            >
              <View
                onLayout={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "aspectRatio": 1,
                    "height": "50%",
                    "justifyContent": "center",
                    "maxHeight": 24,
                    "minHeight": 8,
                    "opacity": 0,
                  }
                }
                testID="badgenetwork"
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderColor": "#ffffff",
                      "borderRadius": 8,
                      "borderWidth": 2,
                      "height": 32,
                      "justifyContent": "center",
                      "overflow": "hidden",
                      "shadowColor": "#0000001a",
                      "shadowOffset": {
                        "height": 2,
                        "width": 0,
                      },
                      "shadowOpacity": 1,
                      "shadowRadius": 4,
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                      "width": 32,
                    }
                  }
                >
                  <Image
                    onError={[Function]}
                    resizeMode="contain"
                    source={1}
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                    testID="network-avatar-image"
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            [
              {
                "flex": 1,
              },
              undefined,
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 30,
                  "marginVertical": 2,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                [
                  {
                    "color": "#121314",
                    "fontSize": 15,
                  },
                  {
                    "fontFamily": "Geist-Medium",
                    "fontSize": 18,
                    "fontWeight": "500",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginTop": 0,
                  },
                ],
              ]
            }
          >
            Test Action
          </Text>
          <Text
            style={
              [
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 30,
                  "marginVertical": 2,
                },
                undefined,
                undefined,
                {
                  "fontFamily": "Geist-Bold",
                },
                {
                  "color": "#457a39",
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                [
                  {
                    "fontSize": 12,
                    "letterSpacing": 0.5,
                    "marginTop": 4,
                  },
                  {
                    "fontFamily": "Geist-Bold",
                    "fontSize": 16,
                    "fontWeight": "700",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                ],
              ]
            }
            testID="transaction-status-undefined"
          >
            Confirmed
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "flex-end",
                "flex": 0.6,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 30,
                  "marginVertical": 2,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                [
                  {
                    "color": "#686e7d",
                    "fontSize": 12,
                    "textTransform": "uppercase",
                  },
                  {
                    "fontFamily": "Geist-Medium",
                    "fontSize": 18,
                    "fontWeight": "500",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginTop": 0,
                  },
                ],
              ]
            }
          >
            $100
          </Text>
          <Text
            style={
              [
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 30,
                  "marginVertical": 2,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                [
                  {
                    "color": "#121314",
                    "fontSize": 15,
                  },
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                ],
              ]
            }
          >
            0.1 ETH
          </Text>
        </View>
      </View>
    </View>
  </TouchableHighlight>,
  <View />,
]
`;

exports[`TransactionElement renderTxTime - "from this device" label renders "from this device" label without nonce for EIP-7702 transactions 1`] = `
[
  <TouchableHighlight
    activeOpacity={1}
    onPress={[Function]}
    style={
      {
        "backgroundColor": "#ffffff",
        "flex": 1,
      }
    }
    underlayColor="#f3f5f9"
  >
    <View
      style={
        [
          {
            "padding": 15,
          },
          undefined,
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 30,
              "marginVertical": 2,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            [
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 12,
                "marginBottom": 10,
              },
              {
                "marginBottom": 10,
                "paddingBottom": 0,
              },
            ],
          ]
        }
      >
        Dec 31 at 7:00 pm from this device
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
            },
            {
              "alignItems": "flex-start",
              "marginTop": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "marginRight": 15,
              },
              undefined,
            ]
          }
        >
          <View
            onLayout={[Function]}
            style={
              {
                "alignSelf": "flex-start",
                "position": "relative",
              }
            }
            testID="badge-wrapper-badge"
          >
            <View>
              <Image
                resizeMode="stretch"
                style={
                  {
                    "height": 32,
                    "width": 32,
                  }
                }
              />
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "aspectRatio": 1,
                  "height": 0,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateY": -0,
                    },
                  ],
                }
              }
            >
              <View
                onLayout={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "aspectRatio": 1,
                    "height": "50%",
                    "justifyContent": "center",
                    "maxHeight": 24,
                    "minHeight": 8,
                    "opacity": 0,
                  }
                }
                testID="badgenetwork"
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderColor": "#ffffff",
                      "borderRadius": 8,
                      "borderWidth": 2,
                      "height": 32,
                      "justifyContent": "center",
                      "overflow": "hidden",
                      "shadowColor": "#0000001a",
                      "shadowOffset": {
                        "height": 2,
                        "width": 0,
                      },
                      "shadowOpacity": 1,
                      "shadowRadius": 4,
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                      "width": 32,
                    }
                  }
                >
                  <Image
                    onError={[Function]}
                    resizeMode="contain"
                    source={1}
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                    testID="network-avatar-image"
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            [
              {
                "flex": 1,
              },
              undefined,
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 30,
                  "marginVertical": 2,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                [
                  {
                    "color": "#121314",
                    "fontSize": 15,
                  },
                  {
                    "fontFamily": "Geist-Medium",
                    "fontSize": 18,
                    "fontWeight": "500",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginTop": 0,
                  },
                ],
              ]
            }
          >
            Test Action
          </Text>
          <Text
            style={
              [
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 30,
                  "marginVertical": 2,
                },
                undefined,
                undefined,
                {
                  "fontFamily": "Geist-Bold",
                },
                {
                  "color": "#457a39",
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                [
                  {
                    "fontSize": 12,
                    "letterSpacing": 0.5,
                    "marginTop": 4,
                  },
                  {
                    "fontFamily": "Geist-Bold",
                    "fontSize": 16,
                    "fontWeight": "700",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                ],
              ]
            }
            testID="transaction-status-undefined"
          >
            Confirmed
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "flex-end",
                "flex": 0.6,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 30,
                  "marginVertical": 2,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                [
                  {
                    "color": "#686e7d",
                    "fontSize": 12,
                    "textTransform": "uppercase",
                  },
                  {
                    "fontFamily": "Geist-Medium",
                    "fontSize": 18,
                    "fontWeight": "500",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginTop": 0,
                  },
                ],
              ]
            }
          >
            $100
          </Text>
          <Text
            style={
              [
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 30,
                  "marginVertical": 2,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                [
                  {
                    "color": "#121314",
                    "fontSize": 15,
                  },
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                ],
              ]
            }
          >
            0.1 ETH
          </Text>
        </View>
      </View>
    </View>
  </TouchableHighlight>,
  <View />,
]
`;

exports[`TransactionElement renderTxTime - "from this device" label renders date only when deviceConfirmedOn is not MM_MOBILE 1`] = `
[
  <TouchableHighlight
    activeOpacity={1}
    onPress={[Function]}
    style={
      {
        "backgroundColor": "#ffffff",
        "flex": 1,
      }
    }
    underlayColor="#f3f5f9"
  >
    <View
      style={
        [
          {
            "padding": 15,
          },
          undefined,
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 30,
              "marginVertical": 2,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            [
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 12,
                "marginBottom": 10,
              },
              {
                "marginBottom": 10,
                "paddingBottom": 0,
              },
            ],
          ]
        }
      >
        Dec 31 at 7:00 pm
      </Text>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
            },
            {
              "alignItems": "flex-start",
              "marginTop": 0,
              "paddingTop": 0,
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "marginRight": 15,
              },
              undefined,
            ]
          }
        >
          <View
            onLayout={[Function]}
            style={
              {
                "alignSelf": "flex-start",
                "position": "relative",
              }
            }
            testID="badge-wrapper-badge"
          >
            <View>
              <Image
                resizeMode="stretch"
                style={
                  {
                    "height": 32,
                    "width": 32,
                  }
                }
              />
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "aspectRatio": 1,
                  "height": 0,
                  "justifyContent": "center",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateY": -0,
                    },
                  ],
                }
              }
            >
              <View
                onLayout={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "aspectRatio": 1,
                    "height": "50%",
                    "justifyContent": "center",
                    "maxHeight": 24,
                    "minHeight": 8,
                    "opacity": 0,
                  }
                }
                testID="badgenetwork"
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderColor": "#ffffff",
                      "borderRadius": 8,
                      "borderWidth": 2,
                      "height": 32,
                      "justifyContent": "center",
                      "overflow": "hidden",
                      "shadowColor": "#0000001a",
                      "shadowOffset": {
                        "height": 2,
                        "width": 0,
                      },
                      "shadowOpacity": 1,
                      "shadowRadius": 4,
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                      "width": 32,
                    }
                  }
                >
                  <Image
                    onError={[Function]}
                    resizeMode="contain"
                    source={1}
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                    testID="network-avatar-image"
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            [
              {
                "flex": 1,
              },
              undefined,
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              [
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 30,
                  "marginVertical": 2,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                [
                  {
                    "color": "#121314",
                    "fontSize": 15,
                  },
                  {
                    "fontFamily": "Geist-Medium",
                    "fontSize": 18,
                    "fontWeight": "500",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginTop": 0,
                  },
                ],
              ]
            }
          >
            Test Action
          </Text>
          <Text
            style={
              [
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 30,
                  "marginVertical": 2,
                },
                undefined,
                undefined,
                {
                  "fontFamily": "Geist-Bold",
                },
                {
                  "color": "#457a39",
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                [
                  {
                    "fontSize": 12,
                    "letterSpacing": 0.5,
                    "marginTop": 4,
                  },
                  {
                    "fontFamily": "Geist-Bold",
                    "fontSize": 16,
                    "fontWeight": "700",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                ],
              ]
            }
            testID="transaction-status-undefined"
          >
            Confirmed
          </Text>
        </View>
        <View
          style={
            [
              {
                "alignItems": "flex-end",
                "flex": 0.6,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 30,
                  "marginVertical": 2,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                [
                  {
                    "color": "#686e7d",
                    "fontSize": 12,
                    "textTransform": "uppercase",
                  },
                  {
                    "fontFamily": "Geist-Medium",
                    "fontSize": 18,
                    "fontWeight": "500",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "marginTop": 0,
                  },
                ],
              ]
            }
          >
            $100
          </Text>
          <Text
            style={
              [
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Regular",
                  "fontSize": 30,
                  "marginVertical": 2,
                },
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
                [
                  {
                    "color": "#121314",
                    "fontSize": 15,
                  },
                  {
                    "color": "#686e7d",
                    "fontFamily": "Geist-Regular",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "letterSpacing": 0,
                    "lineHeight": 24,
                  },
                ],
              ]
            }
          >
            0.1 ETH
          </Text>
        </View>
      </View>
    </View>
  </TouchableHighlight>,
  <View />,
]
`;

exports[`TransactionElement renders correctly 1`] = `null`;
